--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+header .navbar {
+    background-color: #FEEA00;
+}
 
 body {
     background-image: url(../imagens/tijolinhoBranco.jpg);
@@ -22,7 +25,7 @@ body {
     text-decoration: none;
 }
 
-#navegacao2{
+#menu-mobile{
     font-size: 25px;
 }
 
@@ -64,6 +67,54 @@ font-weight: bold;
     margin-bottom: 50px;
 }
 
+.servicos-descricao {
+    margin-top: 5%;
+}
+.servicos-descricao p {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.tipo-servicos {
+    display: flex;
+    justify-content: center;
+}
+
+.servico {
+    padding: 10px;
+    border: 1px solid #bbb;
+    background: #ed9121;
+    color: #fff;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    font-size: 1.5rem;
+    transition: font-size 2s;
+}
+
+.servico:hover {
+    background: #b86b0c;
+    text-decoration: none;
+    color: #fff;
+}
+.consumidor {
+    margin-right: 2rem;
+}
+.prestador {
+    margin-left: 2rem;
+}
+
+.servicos-img {
+    display: flex;
+    justify-content: center;
+    padding-top: 5%;
+    transition: transform 5s;
+}
+.servicos-img:hover {
+    -ms-transform: skewY(-25deg); /* IE 9 */
+    transform: skewY(-25deg);
+}
 
 
 /* Rodapé */
