ajustar folhas css e pagina como funciona

--- a/views/como-funciona.ejs
+++ b/views/como-funciona.ejs
@@ -14,20 +14,12 @@
             </h2>
           </div>
           <div class="flex-container">
-              <ul>
-                  <li class="vantagens">
-                      <span>1</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>2</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>3</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>4</span>
-                  </li>
-              </ul>
+            <ul class="timeline">
+              <li>Cadastre-se em poucos cliques. Procure pelo seu serviço.</li>
+              <li>Faça seu Pedido! É rápido e de graça.</li>
+              <li>Receba orçamentos para o seu pedido.</li>
+              <li>Escolha o melhor orçamento e já entre em contato com o prestador para efetivar o serviço</li>
+            </ul>
           </div>
         </div>
       </section>
