feat: home and some pages are done

--- a/views/como-funciona.ejs
+++ b/views/como-funciona.ejs
@@ -5,22 +5,32 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-                Olha como é rápido e prático realizar aquele serviço
-            </h2>
-          </div>
-          <div class="flex-container">
-            <ul class="timeline">
-              <li>Cadastre-se em poucos cliques. Procure pelo seu serviço.</li>
-              <li>Faça seu Pedido! É rápido e de graça.</li>
-              <li>Receba orçamentos para o seu pedido.</li>
-              <li>Escolha o melhor orçamento e já entre em contato com o prestador para efetivar o serviço</li>
-            </ul>
-          </div>
+    <main class="container">
+      <section id="title">
+        <h2 class="section-title">
+          Olha como é rápido e prático realizar aquele serviço
+        </h2>
+      </section>
+      <section id="information">
+        <div class="list-of-advantages">
+          <ul class="timeline">
+            <li><span>Procure pelo serviço que vai resolver o seu problema</span></li>
+            <li><span>Detalhe o seu problema, se preciso envie imagens e cadastre-se</span></li>
+            <li><span>Receba orçamentos para o seu pedido.</span></li>
+            <li><span>Escolha o melhor orçamento e feche o serviço</span></li>
+          </ul>
+        </div>
+      </section>
+      <hr/>
+      <section id="evaluations">
+        <div class="evaluations-title">
+          <h2>
+            Analise as avaliações
+          </h2>
+          <span>Contrate o profissional mais bem avaliado</span>
+        </div>
+        <div class="evaluations-img">
+          <img src="images/avaliations.png" alt="Avaliações">
         </div>
       </section>
     </main>
