--- a/views/para-profissional.ejs
+++ b/views/para-profissional.ejs
@@ -5,30 +5,46 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-                Coloque aqui a frase de efeito
-            </h2>
-          </div>
-          <div class="flex-container">
-              <ul>
-                  <li class="vantagens">
-                      <span>1</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>2</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>3</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>4</span>
-                  </li>
-              </ul>
-          </div>
+    <main class="container">
+      <section id="title">
+        <h2 class="section-title">
+          Melhor Custo Benefício para Prestar Seu Serviço
+        </h2>
+      </section>
+      <section id="information">
+        <div class="list-of-advantages">
+          <ul class="advantages-sales">
+            <li>
+              <div class="text">
+                <span>Para sua maior segurança, a Helper House verifica os dados de todos os usuários antes de liberar acesso à plataforma.</span>
+              </div>
+              <div class="icon">
+                <h3>
+                  Segurança
+                </h3>
+              </div>
+            </li>
+            <li>
+              <div class="text">
+                <span>Encontre diversos serviços em um só lugar e administre-os dentro de um painel poderoso e organizado para o seu melhor rendimento</span>
+              </div>
+              <div class="icon">
+                <h3>
+                  Praticidade
+                </h3>
+              </div>
+            </li>
+            <li>
+              <div class="text">
+                <span>Após a concretização do pedido, todo o dinheiro pago pelo seu cliente vai direto para o seu bolso, não cobramos nenhuma taxa</span>
+              </div>
+              <div class="icon">
+                <h3>
+                  Sem Taxas
+                </h3>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
