--- a/views/para-quem-contrata.ejs
+++ b/views/para-quem-contrata.ejs
@@ -5,30 +5,46 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-                Olha como é rápido e prático realizar aquele serviço
-            </h2>
-          </div>
-          <div class="flex-container">
-              <ul>
-                  <li class="vantagens">
-                      <span>1</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>2</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>3</span>
-                  </li>
-                  <li class="vantagens">
-                      <span>4</span>
-                  </li>
-              </ul>
-          </div>
+    <main class="container">
+      <section id="title">
+        <h2 class="section-title">
+          Segurança, praticidade e menor preço para sua obra
+        </h2>
+      </section>
+      <section id="information">
+        <div class="list-of-advantages">
+          <ul class="advantages-buyer">
+            <li>
+              <div class="icon">
+                <h3>
+                  Segurança
+                </h3>
+              </div>
+              <div class="text">
+                <span>Para sua maior segurança, a Helper House verifica os dados de todos os profissionais antes de liberar o seu acesso à plataforma.</span>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <h3>
+                  Praticidade
+                </h3>
+              </div>
+              <div class="text">
+                <span>Encontre em um só lugar profissionais com ampla experiência de mercado e de quaisquer serviços desejados</span>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <h3>
+                  Menor Preço
+                </h3>
+              </div>
+              <div class="text">
+                <span>Com o orçamento de diversos profissionais, você pode analisar e negociar o serviço no melhor preço</span>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
