--- a/public/stylesheets/como-funciona.css
+++ b/public/stylesheets/como-funciona.css
@@ -1,14 +1,27 @@
-.timeline{
-  position: relative;
-  display: flex;
+body {
+  overflow-x: hidden;
+}
+.container {
+  margin: 0 auto;
+}
+.section-title {
+  text-align: center;
 }
 
+#title, #information, #information-plus {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+.timeline{
+  display: flex;
+}
 .timeline li{
   list-style: none;
-  width: 25%;
+  flex: 1 1 25%;
   position: relative;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0 10px;
   text-align: center;
 }
 
@@ -28,15 +41,13 @@
 .timeline li:before{
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 100%;
   display: block;
   text-align: center;
   line-height: 50px;
   margin: 0 auto 10px auto;
   background: #feea00;
   color: #000;
-  transition: all ease-in-out .3s;
-  cursor: pointer;
 }
 
 .timeline li:after{
@@ -47,10 +58,46 @@
   background-color: #feea00;
   top: 25px;
   left: -50%;
-  z-index: -999;
-  transition: all ease-in-out .3s;
+  z-index: -1;
 }
 
 .timeline li:first-child:after{
   content: none;
+}
+
+@media(min-width: 769px) {
+  #evaluations {
+    display: flex;
+    justify-content: space-around;
+  }
+  .evaluations-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media(max-width: 768px) {
+  .evaluations-title {
+    text-align: center;
+  }
+  .evaluations-img {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+  }
+  .timeline {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 100%;
+  }
+  .timeline li:after{
+    background: none;
+  }
+  .timeline li {
+    min-width: 100%;
+    padding: 10px 15px;
+    text-align: center;
+  }
 }
