--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,12 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
-header .navbar {
-  background-color: #feea00;
-}
 header {
+  background-color: #feea00;
   position: sticky;
   top: 0;
+  z-index: 999;
 }
 
 .cont {
@@ -64,70 +63,17 @@ button {
   margin-bottom: 50px;
 }
 
-.servicos-descricao {
-  margin-top: 5%;
-}
-.servicos-descricao p {
-  text-align: center;
-  font-size: 1.5rem;
-}
-
-.tipo-servicos {
-  display: flex;
-  justify-content: center;
-}
-
-.servico {
-  padding: 10px;
-  border: 1px solid #bbb;
-  background: #ed9121;
-  color: #fff;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  margin-top: 5%;
-  font-size: 1.3rem;
-}
-
-.servico:hover {
-  background: #b86b0c;
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.5rem;
-  transition: font-size 2s;
-}
-.consumidor {
-  margin-right: 2rem;
-}
-.prestador {
-  margin-left: 2rem;
-}
-
-.servicos-img {
-  display: flex;
-  justify-content: center;
-  padding-top: 5%;
-}
 
 /* Rodapé */
 
-.footer {
+#footer {
   min-height: 20px;
-  flex-direction: column;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: center;
+  padding: 10px 15px;
+  background-color: #feea00;
 }
 
-#footer h1 {
-  font-size: 20px;
-}
-
-#footer h2 {
-  color: black;
-  font-size: 15px;
-  margin-top: 10px;
-  margin-bottom: 5px;
+.footer-title h1,.footer-title h2 {
+  font-size: 25px;
 }
 
 .social {
@@ -152,13 +98,21 @@ ul.social-item li {
   padding: 0 10px;
   text-align: center;
 }
-.vantagens span:before {
-  content: '';
-  width: 25px;
-  height: 25px;
-  border-radius: 25px;
-  border: 4px solid #b86b0c;
-  background: #b86b0c;
-  position: absolute;
-  transition: all 200ms ease-in;
+
+.footer-creditos {
+  display: flex;
+  justify-content: center;
+}
+footer .row {
+  margin: 15px 0;
+}
+footer .col-md-6 {
+  display: flex;
+  justify-content: center;
+}
+@media(max-width: 768px) {
+  .footer-title {
+    display: flex;
+    justify-content: center;
+  }
 }
