--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,32 +6,28 @@
   <body>
     <%- include('./partials/header') %>
     <main class="container">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-              Praticidade e agilidade nas manutenções e reformas do seu imóvel!
-            </h2>
+      <section id="title">
+        <h2 class="section-title">
+          Praticidade e agilidade nas manutenções e reformas do seu imóvel!
+        </h2>
+      </section>
+      <section id="information">
+        <div class="servicos">
+          <div class="servicos-descricao">
+              <p>
+                Somos a nova startup para de contratação de serviços do Brasil. Conectamos Profissionais de todo o Brasil com pessoas solicitando serviço, atendendo com qualidade, facilidade e rapidez todos os tipos de necessidade.
+              </p>
           </div>
-          <div class="flex-container">
-              <div class="servicos">
-                <div class="servicos-descricao">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rutrum ullamcorper nulla a laoreet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean cursus urna at dolor tincidunt viverra. 
-                    </p>
-                </div>
-                <div class="tipo-servicos">
-                    <a href="/para-quem-contrata" class="consumidor servico">
-                        Para quem precisa de um serviço
-                    </a>
-                    <a href="/para-profissional" class="prestador servico">
-                        Para quem presta serviço
-                    </a>
-                </div>
-                <div class="servicos-img">
-                    <img src="images/home-obra.png" alt="Serviços da sua casa">
-                </div>
-              </div>
+          <div class="tipo-servicos">
+              <a href="/para-quem-contrata" class="consumidor servico">
+                  Para quem precisa de um serviço
+              </a>
+              <a href="/para-profissional" class="prestador servico">
+                  Para quem presta serviço
+              </a>
+          </div>
+          <div class="servicos-img">
+              <img src="images/home-obra.png" alt="Serviços da sua casa">
           </div>
         </div>
       </section>
