--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,35 +1,47 @@
 <footer>
     <section id="footer">
-      <div class="footer cont">
-        <div class="brand">
-          <h1><span>Helper House</span></h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="footer-title">
+              <h1>Helper House</h1>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="footer-contatos">
+              <div class="footer-title">
+                <h2>Redes Sociais</h2>
+              </div>
+              <ul class="social-item" t>
+                <li>
+                  <a href="http://www.facebook.com.br">
+                    <img src="images/face.png" alt="Facebook"
+                  /></a>
+                </li>
+                <li>
+                  <a href="http://www.instagram.com"
+                    ><img src="images/inst.png" alt="Instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a href="http://www.twitter.com"
+                    ><img src="images/tw.png" alt="Twitter"
+                  /></a>
+                </li>
+                <li>
+                  <a href="http://www.youtube.com.br"
+                    ><img src="images/you.png" alt="YouTube"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <h2>As Suas mãos à obra!</h2>
-        <div class="social">
-          <ul class="social-item" t>
-            <li>
-              <a href="http://www.facebook.com.br">
-                <img src="images/face.png" alt="Facebook"
-              /></a>
-            </li>
-            <li>
-              <a href="http://www.instagram.com"
-                ><img src="images/inst.png" alt="Instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="http://www.twitter.com"
-                ><img src="images/tw.png" alt="Twitter"
-              /></a>
-            </li>
-            <li>
-              <a href="http://www.youtube.com.br"
-                ><img src="images/you.png" alt="YouTube"
-              /></a>
-            </li>
-          </ul>
+        <div class="row footer-creditos">
+            <span>
+              Copyright © 2021 Helper House. Todos Direitos Reservados.
+            </span>
         </div>
-        <p>Copyright © 2021 Helper House. Todos Direitos Reservados.</p>
       </div>
     </section>
   </footer>
