--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,5 @@
 <header>
+  <div class="container">
     <nav class="navbar navbar-expand-sm navbar-light">
       <!--Brand/Logo-->
       <a class="navbar-brand" href="/">
@@ -42,4 +43,5 @@
         </ul>
       </div>
     </nav>
-  </header>
+  </div>
+</header>
