--- a/views/dashboard-pedidos-prestador.ejs
+++ b/views/dashboard-pedidos-prestador.ejs
@@ -6,18 +6,34 @@
   <body>
     <%- include('./partials/header') %>
     <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
+      <section id="title">
             <h2 class="section-title">
-                <!--Coloque aqui frase principal da página-->
+                Confira abaixo seus pedidos:
             </h2>
           </div>
           <div class="flex-container">
-            <h1>Confira abaixo seus pedidos:</h1>
-            <h5>Pedidos próximos ao CEP: 22795090     Editar</h5>
+            
+            <h>Pedidos próximos ao CEP:  22795090  Editar</h3>
           </div>
         </div>
+        <ul>
+          <lo>
+            <div class="container">
+              <h3>
+                Pedido 1
+              </h3>
+            </div>
+            
+          </lo>
+          <lo>
+            <div class="container">
+              <h3>
+                Pedido 2
+              </h3>
+            </div>
+            </lo>
+                 
+        </ul>
       </section>
     </main>
     <%- include('./partials/footer') %>
