--- a/views/dashboard-pedidos-prestador.ejs
+++ b/views/dashboard-pedidos-prestador.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
+    <main class="container" id="dashboard-pedidos-prestador">
       <section id="title">
             <h2 class="section-title">
                 Confira abaixo seus pedidos:
@@ -13,7 +13,7 @@
           </div>
           <div class="flex-container">
             
-            <h>Pedidos próximos ao CEP:  22795090  Editar</h3>
+            <h3>Pedidos próximos ao CEP:  22795090  Editar</h3>
           </div>
         </div>
         <ul>
