Telas Wesley - Solicitar serviço, solicitar servico eletrica, hidraulica e pintura, cadastro prestador de serviço

--- a/views/solicitar-servico.ejs
+++ b/views/solicitar-servico.ejs
@@ -2,21 +2,44 @@
 <html>
   <head>
     <%- include('./partials/head') %>
+    <link rel="stylesheet" href="/stylesheets/novaSolicitaçãoTomadorServico.css">
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-                <!--Coloque aqui frase principal da página-->
-            </h2>
-          </div>
-          <div class="flex-container">
-            <!--Coloque aqui o conteúdo da página-->
+    <main class="container1">
+      <section >
+        <h2 class="section-title">
+          Selecione a especialidade do profissional que deseja contratar
+        </h2>
+      </section>
           </div>
         </div>
+            <div class="flex-container">
+              <h4>
+                <ul>                      
+                    <div class="Imagens-servicos">
+                      <div>
+                        <img  src="images/eletricista.png" alt="servicos eletricista">
+                        <a href="/solicitar-servico-eletricista" class="botaoServico">
+                          Serviços de eletricista
+                        </a>
+                      </div>
+                      <div>
+                        <img  src="images/encanador.png" alt="servicos Hidráulica">
+                        <a href="/solicitar-servico-encanador" class="botaoServico">
+                          Serviços de encanador 
+                        </a>
+                      </div>
+                      <div>
+                        <img  src="images/pintor.png" alt="servicos pintor">
+                        <a href="/solicitar-servico-pintor" class="botaoServico">
+                          Serviços de Pintor 
+                        </a>
+                      </div>                          
+                    </div>
+                  </ul>
+              </h4>
+            </div>
       </section>
     </main>
     <%- include('./partials/footer') %>
