--- a/views/para-profissional.ejs
+++ b/views/para-profissional.ejs
@@ -47,6 +47,11 @@
           </ul>
         </div>
       </section>
+      <section id="action">
+        <a id="cadastro-prestador" href="/cadastro-prestador">
+          Sou profissional e quero oferecer meu serviço
+        </a>
+      </section>
     </main>
     <%- include('./partials/footer') %>
   </body>
