--- a/views/para-quem-contrata.ejs
+++ b/views/para-quem-contrata.ejs
@@ -47,6 +47,11 @@
           </ul>
         </div>
       </section>
+      <section id="action">
+        <a id="solicitar-servico" href="/solicitar-servico">
+          Quero solicitar um serviço
+        </a>
+      </section>
     </main>
     <%- include('./partials/footer') %>
   </body>
