--- a/views/dashboard-pedidos-tomador.ejs
+++ b/views/dashboard-pedidos-tomador.ejs
@@ -5,17 +5,45 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
+    <main class="container" id="dashboard-pedidos-tomador">
+      <section id="title">
+        <div>
             <h2 class="section-title">
-                <!--Coloque aqui frase principal da página-->
+                Confira abaixo seus pedidos:
             </h2>
-          </div>
-          <div class="flex-container">
-            <!--Coloque aqui o conteúdo da página-->
-          </div>
+        </div>
+        </section>
+        <section class="subtitle">
+        <div>
+            <h5>Pedidos próximos ao CEP:  22795090 </h5>
+        </div>
+      </section>
+      <section id= "display">
+        </div>
+        <div class="display-pedidos">
+        <ul>
+          <lo>
+            <div class="container-secundario">
+              <h3>
+                Pedido 1
+              </h3>
+              <div class ="button">
+                <a href="javascript:void(0)">Detalhes Pedido</a>
+              </div>
+            </div>
+            </lo>
+          <lo>
+            <div class="container-secundario">
+              <h3>
+                Pedido 2
+              </h3>
+              <div class ="button">
+                <a href="javascript:void(0)">Detalhes Pedido</a>
+              </div>
+            </div>
+            </lo>
+                 
+        </ul>
         </div>
       </section>
     </main>
