--- a/views/dashboard-pedidos-tomador.ejs
+++ b/views/dashboard-pedidos-tomador.ejs
@@ -13,36 +13,43 @@
             </h2>
         </div>
         </section>
-        <section class="subtitle">
-        <div>
-            <h5>Pedidos próximos ao CEP:  22795090 </h5>
-        </div>
-      </section>
-      <section id= "display">
+        <section id= "display">
         </div>
         <div class="display-pedidos">
         <ul>
           <lo>
+            <div class="container">
+            <h3>Pendentes</h3>
+            </div>
             <div class="container-secundario">
-              <h3>
-                Pedido 1
-              </h3>
+              <h3>Pedido 1</h3>
               <div class ="button">
                 <a href="javascript:void(0)">Detalhes Pedido</a>
               </div>
             </div>
             </lo>
           <lo>
+            <div class="container">
+              <h3>Aprovados</h3>
+              </div>
             <div class="container-secundario">
-              <h3>
-                Pedido 2
-              </h3>
+              <h3>Pedido 1</h3>
               <div class ="button">
                 <a href="javascript:void(0)">Detalhes Pedido</a>
               </div>
             </div>
             </lo>
-                 
+            <lo>
+              <div class="container">
+                <h3>Recusados</h3>
+                </div>
+              <div class="container-secundario">
+                <h3>Pedido 1</h3>
+                <div class ="button">
+                  <a href="javascript:void(0)">Detalhes Pedido</a>
+                </div>
+              </div>
+              </lo>
         </ul>
         </div>
       </section>
