--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,36 +5,73 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container">
+    <main id="login">
         <section id="projeto">
-            <section id="projeto">
-                <div class="projeto cont">
-                    <div class="projeto-header">
-                        <h1 class="section-title">Login</h1>
-                    </div>
-                    <div class="flex-container" >
-                    <form action="/action_page.php">
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email" size="40" placeholder="E-mail" name="email">
-                        </div><p>
-                        <div class="form-group">
-                            <label for="senha">Senha:</label>
-                            <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
-                        </div><p>
-                            <div class="checkbox">
-                                <label><input type="checkbox" width="100px" name="lembrar">&nbsp;&nbsp;Lembrar-me</label>
-                            </div><p>
-                        <div>
-                        <section id="botao">
-                            <button class="b-login" type="submit" id="enviar">Enviar</button>
-                        </section>
-                        </div>
-        
-                    </form>
+            <div class="projeto cont">
+                <div class="projeto-header">
+                    <h1 class="section-title">Acesse sua conta!</h1>
                 </div>
-            </div>
-        </section>
+                <nav class="nav_tabs">
+        <ul>
+            <li>
+                <input type="radio" name="tabs" class="rd_tabs" id="Cliente" checked>
+                <label for="Cliente">Cliente</label>
+                <div class="content">
+                    <article>
+                        <form action="/action_page.php">
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email" size="40" placeholder="E-mail" name="email">
+                            </div><p>
+                            <div class="form-group">
+                                <label for="senha">Senha:</label>
+                                <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
+                            </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" width="100px" name="lembrar">&nbsp;&nbsp;Lembrar-me</label>
+                                </div><p>
+                            
+                            <div>
+                            <section id="botao">
+                                <button class="b-login" type="submit" id="enviar">Enviar</button>
+                            </section>
+                            </div>
+                        </form>
+                    </article>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="tabs" class="rd_tabs" id="Parceiro">
+                <label for="Parceiro">Parceiro</label>
+                <div class="content">
+                    <article>
+                        <form action="/action_page.php">
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email" size="40" placeholder="E-mail" name="email">
+                            </div><p>
+                            <div class="form-group">
+                                <label for="senha">Senha:</label>
+                                <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
+                                <div class="checkbox">
+                                    <input type="checkbox" width="100px" 
+                                    name="lembrar">&nbsp;&nbsp;Lembrar-me
+                                </div><p>
+                           
+                            <section id="botao">
+                                <button class="b-login" type="submit" id="enviar">Enviar</button>
+                            </section>
+                            </div>
+                        </form>
+                    </article>
+                </div>
+            </li>
+        </ul>
+
+    </nav>
+                
+    
+    </section>
     </main>
     <%- include('./partials/footer') %>
   </body>
