--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -47,7 +47,7 @@
                       </div>        
               </div>
               <center>
-                  <button type="button" class="b-enviar" onclick="alert('Enviado com Sucesso!')">Enviar</button>
+                  <button type="button" class="b-enviar" onclick="window.alert('Dados Salvos com Sucesso, agora escolha seu plano');window.location = '/escolha-de-plano'">Enviar</button>
               </center>
               </form>
           </div>
