--- a/views/criar-conta.ejs
+++ b/views/criar-conta.ejs
@@ -5,20 +5,21 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-                <!--Coloque aqui frase principal da página-->
-            </h2>
-          </div>
-          <div class="flex-container">
-            <!--Coloque aqui o conteúdo da página-->
-          </div>
-        </div>
-      </section>
-    </main>
+    <main>
+      <div class="count-title">
+          <h2>Crie sua conta</h2>
+          <p>Qual a melhor opção?</p>
+      </div>
+      <div class="bttn-newcount">
+          <p><button>
+              <a href="/solicitar-servico"> Preciso de um profissional</button></p></a>
+          <p><button>
+              <a href="/cadastro-prestador">Quero ser parceiro</button></p></a> 
+      </div>
+
+
+  </main>
+
     <%- include('./partials/footer') %>
   </body>
 </html>
