--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
                 <label for="Cliente">Cliente</label>
                 <div class="content">
                     <article>
-                        <form action="/action_page.php">
+                        <form action="/criar-conta">
                             <div class="form-group">
                                 <label for="email">Email:</label>
                                 <input type="email" class="form-control" id="email" size="40" placeholder="E-mail" name="email">
@@ -45,7 +45,7 @@
                 <label for="Parceiro">Parceiro</label>
                 <div class="content">
                     <article>
-                        <form action="/action_page.php">
+                        <form action="/criar-conta">
                             <div class="form-group">
                                 <label for="email">Email:</label>
                                 <input type="email" class="form-control" id="email" size="40" placeholder="E-mail" name="email">
@@ -69,7 +69,15 @@
         </ul>
 
     </nav>
-                
+    <hr>
+    <div class="criar-conta">
+        <p>
+            <strong>Ainda não tem conta?</strong>
+        </p>
+        <a href="/criar-conta">
+            Criar Conta
+        </a>    
+    </div>        
     
     </section>
     </main>
