--- a/public/stylesheets/cadastro-parceiro.css
+++ b/public/stylesheets/cadastro-parceiro.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url(../imagens/tijolinhoBranco.jpg);
+    background-image: url(../images/tijolinhoBranco.jpg);
 }
 
 .container {
@@ -76,10 +76,14 @@ margin-top: 20px;
     font-size: 18px;
     margin-bottom: 50px;
     border-radius: 10px;
-    width: 30px;
+    width: 300px;
     height: 70px;
     font-weight: bold;
     text-align: center;
+}
+
+.bttn-newcount button a {
+    color: #fff
 }
 
 form, #flex-container {
@@ -140,50 +144,5 @@ option {
     height: 100px;
     border-radius: 10px;
     font-weight: bold;
-    text-align: center;
-}
-
-/* Rodapé */
-
-.footer {
-    min-height: 20px;
-    flex-direction: column;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-align: center;
-    bottom:0;
-    width:100%;
-}
-
-#footer h1{
-    font-size: 20px;
-}
-
-#footer h2 {
-    color: black;
-    font-size: 15px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-
-.social {
-    display: inline-flex;
-}
-
-ul.social-item li a{
-    text-align: center;
-}
-
-.social-item img {
-    list-style-type: none;
-    height: 30px;
-    width: 30px;
-    margin: 0 5px;
-    text-align: center;
-}
-
-ul.social-item li{
-    display: inline-block;
-    padding: 0 10px;
     text-align: center;
 }
