--- a/views/assinatura-plano.ejs
+++ b/views/assinatura-plano.ejs
@@ -5,20 +5,43 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <main class="container" id="page-como">
-      <section id="projeto">
-        <div class="projeto cont">
-          <div class="projeto-header">
-            <h2 class="section-title">
-                <!--Coloque aqui frase principal da página-->
-            </h2>
+    <main>
+      <div class="projeto">
+          <h1 class="section-title">Parceiro</h1>
+      <nav class="nav_pag">
+          <div class="info">
+              <h3><strong>Parceiro</strong></h3>
+              <p>Último passo: Confirme os dados para pagamento.</p>
+              <p>Finalinalize sua inscrição e comece a receber propostas!</p>
           </div>
-          <div class="flex-container">
-            <!--Coloque aqui o conteúdo da página-->
+          <div id="estilo-plano">
+              <p>RESUMO DO PLANO ESCOLHIDO</p>
+              <div id="plan-container">
+                  <h4>PLANO XYZ</h4>
+                  <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id architecto aperiam sint odit. Vitae libero fuga, aliquid tempora est harum rerum nisi ipsa quis possimus, error assumenda delectus, provident nulla.</P>
+
+                  <p style="font-style: italic;">Lorem amet consectetur adipiscing elit.</p>
+              </div>
+              <div class="tipo-pagament">
+                  <p>ESCOLHA A FORMA DE PAGAMENTO:</p>
+                  <Select id="b-plano"> 
+                      <option value="boleto">Boleto</option>
+                      <option value="credito">Cartao de Crédito</option>
+                      <option value="debito">Cartao de Débito</option>
+                  </SELect>
+
+              </div>
+
           </div>
-        </div>
-      </section>
-    </main>
+          
+          
+
+
+
+      </nav>
+      </div>
+  </main>
+
     <%- include('./partials/footer') %>
   </body>
 </html>
